feat(upload): part1

--- a/lang/vi.json
+++ b/lang/vi.json
@@ -1,4 +1,5 @@
 {
   "Header.home.contact": "Liên hệ",
-  "Header.home.home": "Trang chủ"
+  "Header.home.home": "Trang chủ",
+  "Sec1.home.title": "CHÀO MỪNG BẠN ĐẾN VỚI BỘ SƯU TẬP ẢNH CỦA...."
 }
